[package]
name = "bakuretsu_komahiroi_taro"
version = "3.0.0"
edition = "2021"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
encoding = "0.2.33"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.59"
shogi_core = "0.1.4"
shogi_usi_parser = "0.1.0"
yasai = { git = "https://github.com/burokoron/yasai/", rev = "b7bde8287d18b343920f4a9dd7e570729dd8d0ca" }