[package]
name = "bakuretsu_tensei_taro"
version = "0.0.2"
edition = "2021"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yasai = { git = "https://github.com/sugyan/yasai", tag = "0.1.3" }
serde_json = "1.0.59"
encoding = "0.2.33"